# tmosh

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASING.md  install.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
src/: main.rs  menu.rs  tmux.rs  update.rs
